--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Stefan Alecsa</title>
 </head>
 <body>
+
+    <p>
+        Me llamo Stefan Alecsa, tengo 18 años y me gusta mucho la informática.
+    </p>
     
 </body>
 </html>
