--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <p>
-        Me llamo Stefan Alecsa, tengo 18 años y me gusta mucho la informática.
+        <mark>Me llamo Stefan Alecsa, tengo 18 años y me gusta mucho la informática.</mark>
     </p>
     
 </body>
