--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -25,7 +25,7 @@
       </div>
       <div class="section">
         <h2>VIDEO DEL PROYECTO</h2>
-        <p><video src="https://youtu.be/hz_xy0w2GT4" poster="Portada.jpg" controls muted preload="metadata"></video></p> <!-- Se le indica al navegador que descargue los metadatos del video, pero no el video en sí -->
+        <p><video src="PROYECTO_AW_STEFAN_ALECSA.mp4" poster="Portada.jpg" controls muted preload="metadata"></video></p> <!-- Se le indica al navegador que descargue los metadatos del video, pero no el video en sí -->
         <p>ENLACE AL VÍDEO:<a href="https://youtu.be/hz_xy0w2GT4/p">https://youtu.be/hz_xy0w2GT4</p</a>
       </div>
     </div>
