--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -25,8 +25,8 @@
       </div>
       <div class="section">
         <h2>VIDEO DEL PROYECTO</h2>
-        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/hz_xy0w2GT4?si=FZ45vtMINuhfFT6Y" title="YouTube video player" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <p>ENLACE AL VÍDEO:<a href="https://youtu.be/hz_xy0w2GT4/p">https://youtu.be/hz_xy0w2GT4</a></p>
+        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/MYb2yAS96wY?si=QV50G2lsxVO1XknJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+        <p>ENLACE AL VÍDEO:<a href="https://www.youtube.com/watch?v=MYb2yAS96wY">https://www.youtube.com/watch?v=MYb2yAS96wY</a></p>
       </div>
     </div>
     <nav class="Menú">
